fix: adsense wrap css

--- a/assets/css/_post.scss
+++ b/assets/css/_post.scss
@@ -456,8 +456,7 @@
 }
 
 .adsense-wrap {
-  display: flex;
-  align-items: center;
+  text-align: center;
   background: white;
   border: 1px solid #d1cad8;
   padding: 20px 20px;
